Bug 234392 - nsIRDFResource needs scriptable access to IDN resources. r=pike sr=darin