mailnews/addrbook/src/nsAbMDBDirectory.cpp
@@ -327,16 +327,15 @@ NS_IMETHODIMP nsAbMDBDirectory::AddDirectory(const char *uriName, nsIAbDirectory
 
 NS_IMETHODIMP nsAbMDBDirectory::GetDirUri(char **uri)
 {
-  if (uri)
-  {
-    if (mURI)
-      *uri = nsCRT::strdup(mURI);
-    else
-      *uri = nsCRT::strdup("");
-    return NS_OK;
-  }
-  else
-    return NS_RDF_NO_VALUE;
+  NS_ASSERTION(uri, "Null out param");
+  NS_ASSERTION(!mURI.IsEmpty(), "Not initialized?");
+
+  *uri = ToNewCString(mURI);
+
+  if (!*uri)
+    return NS_ERROR_OUT_OF_MEMORY;
+
+  return NS_OK;
 }
 
 
@@ -381,15 +380,16 @@ NS_IMETHODIMP nsAbMDBDirectory::GetChildCards(nsIEnumerator* *result)
     return array->Enumerate(result);
   }
 
-  if (mURI && mIsMailingList == -1)
+  NS_ASSERTION(!mURI.IsEmpty(), "Not Initialized?");
+  if (mIsMailingList == -1)
   {
     /* directory URIs are of the form
      * moz-abmdbdirectory://foo
      * mailing list URIs are of the form
      * moz-abmdbdirectory://foo/bar
      */
-    NS_ENSURE_TRUE(strlen(mURI) > kMDBDirectoryRootLen, NS_ERROR_UNEXPECTED);
-    if (strchr(mURI + kMDBDirectoryRootLen, '/'))
+    NS_ENSURE_TRUE(mURI.Length() > kMDBDirectoryRootLen, NS_ERROR_UNEXPECTED);
+    if (strchr(mURI.get() + kMDBDirectoryRootLen, '/'))
       mIsMailingList = 1;
     else
       mIsMailingList = 0;
@@ -493,7 +493,7 @@ NS_IMETHODIMP nsAbMDBDirectory::DeleteCards(nsISupportsArray *cards)
             //to do, get mailing list dir side uri and notify rdf to remove it
             PRUint32 rowID;
             dbcard->GetDbRowID(&rowID);
-            char *listUri = PR_smprintf("%s/MailList%ld", mURI, rowID);
+            char *listUri = PR_smprintf("%s/MailList%ld", mURI.get(), rowID);
             if (listUri)
             {
               nsresult rv = NS_OK;
@@ -656,7 +656,7 @@ nsresult nsAbMDBDirectory::InternalAddMailList(nsIAbDirectory *list, PRUint32 *k
   dblist->GetDbRowID(&dbRowID);
 
   nsCAutoString listUri;
-  listUri = nsDependentCString(mURI) + NS_LITERAL_CSTRING("/MailList");
+  listUri = mURI + NS_LITERAL_CSTRING("/MailList");
   listUri.AppendInt(dbRowID);
 
   nsCOMPtr<nsIAbDirectory> newList;
@@ -734,15 +734,16 @@ NS_IMETHODIMP nsAbMDBDirectory::DropCard(nsIAbCard* aCard, PRBool needToCopyCard
   if (!isNormal)
     return NS_OK;
 
-  if (mURI && mIsMailingList == -1)
+  NS_ASSERTION(!mURI.IsEmpty(), "Not initialized?");
+  if (mIsMailingList == -1)
   {
     /* directory URIs are of the form
      * moz-abmdbdirectory://foo
      * mailing list URIs are of the form
      * moz-abmdbdirectory://foo/bar
      */
-    NS_ENSURE_TRUE(strlen(mURI) > kMDBDirectoryRootLen, NS_ERROR_UNEXPECTED);
-    if (strchr(mURI + kMDBDirectoryRootLen, '/'))
+    NS_ENSURE_TRUE(mURI.Length() > kMDBDirectoryRootLen, NS_ERROR_UNEXPECTED);
+    if (strchr(mURI.get() + kMDBDirectoryRootLen, '/'))
       mIsMailingList = 1;
     else
       mIsMailingList = 0;
@@ -981,13 +982,15 @@ nsresult nsAbMDBDirectory::OnSearchFoundCard (nsIAbCard* card)
 
 nsresult nsAbMDBDirectory::GetAbDatabase()
 {
-  if (!mDatabase && mURI) {
+  NS_ASSERTION(!mURI.IsEmpty(), "Not initialized?");
+
+  if (!mDatabase) {
     nsresult rv;
 
     nsCOMPtr<nsIAddressBook> addressBook = do_GetService(NS_ADDRESSBOOK_CONTRACTID, &rv);
     NS_ENSURE_SUCCESS(rv,rv);
 
-    rv = addressBook->GetAbDatabaseFromURI(mURI, getter_AddRefs(mDatabase));
+    rv = addressBook->GetAbDatabaseFromURI(mURI.get(), getter_AddRefs(mDatabase));
     NS_ENSURE_SUCCESS(rv,rv);
 
     rv = mDatabase->AddListener(this);
